# swagger-api-codegen/swagger.yaml
@@ -363,6 +363,50 @@ paths:
         - users
       security:
         - accessToken: []
+  /change-session-requests:
+    get:
+      operationId: findRequestsByCondition
+      summary: Find Requests By Condition
+      parameters:
+        - name: from
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: to
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: substituteTeacherId
+          required: false
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Result'
+                  - properties:
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/ChangeSessionRequestDto'
+                          nullable: false
+                      success:
+                        type: boolean
+                      message:
+                        type: string
+                        nullable: true
+                        example: null
+      tags:
+        - change-session-requests
+      security:
+        - accessToken: []
   /change-session-requests/{id}:
     patch:
       operationId: updateRequest
@@ -382,8 +426,6 @@ paths:
       responses:
         '200':
           description: ''
-        '201':
-          description: ''
           content:
             application/json:
               schema:
@@ -392,6 +434,7 @@ paths:
                   - properties:
                       data:
                         $ref: '#/components/schemas/ChangeSessionRequestDto'
+                        nullable: false
                       success:
                         type: boolean
                       message:
@@ -450,17 +493,12 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-        '201':
-          description: ''
-          content:
-            application/json:
-              schema:
                 allOf:
                   - $ref: '#/components/schemas/Result'
                   - properties:
                       data:
                         $ref: '#/components/schemas/ChangeSessionRequestDto'
+                        nullable: false
                       success:
                         type: boolean
                       message:
@@ -516,8 +554,6 @@ paths:
       responses:
         '200':
           description: ''
-        '201':
-          description: ''
           content:
             application/json:
               schema:
@@ -526,6 +562,7 @@ paths:
                   - properties:
                       data:
                         $ref: '#/components/schemas/ChangeSessionRequestDto'
+                        nullable: false
                       success:
                         type: boolean
                       message:
@@ -584,17 +621,12 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-        '201':
-          description: ''
-          content:
-            application/json:
-              schema:
                 allOf:
                   - $ref: '#/components/schemas/Result'
                   - properties:
                       data:
                         $ref: '#/components/schemas/ChangeSessionRequestDto'
+                        nullable: false
                       success:
                         type: boolean
                       message:
